json-input debuging